option optimize_for = LITE_RUNTIME;

import "common.proto";
package orwell.messages;

// Tell a player wants to join
// answered by: Welcome, Goodbye
message Hello {
	required string name = 1;
	optional bool ready = 2 [default = true];
}

// Notify the state of the inputs to control the robot
message Input {
	optional group Move = 1 {
		optional double left = 1;
		optional double right = 2;
	}
	optional group Fire = 2 {
		optional bool weapon1 = 1;
		optional bool weapon2 = 2;
	}
}

// Ask for a pong message to mesure timings
message Ping {
	repeated Timing timing = 1;
}
